[package]
name = "m2ts-packet"
version = "0.0.1"
edition = "2024"
authors     = ["b01o <b01o@proton.me>"]
repository  = "https://github.com/b01o/m2ts-packet"
license     = "MIT"
description = "A Simple MPEG2 Transport Stream (TS) packet decoder."

keywords = ["mpeg2", "ts", "mpeg2ts", "decoder", "parser"]
categories = ["multimedia::encoding"]

[dependencies]
bitfield-struct = "0.12.1"
bytes = "1.11.1"
thiserror = "2.0.18"
tokio = "1.28.0"
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["codec"] }

[dev-dependencies]
tokio = { version = "1.28.0", features = ["full"] }
remote-file = "0.2.0"
reqwest = { version = "0.13", default-features = false, features = ["native-tls"] }
anyhow = "1"
